--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,4 +44,36 @@ jobs:
         run: dotnet test -c Release --logger GitHubActions
 
       - name: Publish
-        run: dotnet publish -c Release -o ./publish
+        run: dotnet publish -c Release
+
+      - name: Package
+        run: dotnet pack -c Release
+
+  deploy:
+    name: Deploy to Nuget
+    runs-on: ubuntu-latest
+    needs: [build]
+    # if: github.ref_name == github.event.repository.default_branch
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-dotnet@v4
+
+      - name: Package
+        run: dotnet pack -c Release
+
+      - name: Check for NUGET_TOKEN Secret availability
+        id: nuget-token-check
+        shell: bash
+        run: |
+          if [ "${{ secrets.NUGET_TOKEN }}" != '' ]; then
+            echo "defined=true" >> $GITHUB_OUTPUT;
+          else
+            echo "defined=false" >> $GITHUB_OUTPUT;
+          fi
+
+      - name: Publish the package to nuget.org
+        if: steps.nuget-token-check.outputs.defined == 'true'
+        run: dotnet nuget push */bin/Release/*.nupkg -k $NUGET_AUTH_TOKEN -s https://api.nuget.org/v3/index.json
+        env:
+          NUGET_AUTH_TOKEN: ${{ secrets.NUGET_TOKEN }}
