--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,15 +52,15 @@ jobs:
   package:
     name: Package
     runs-on: ubuntu-latest
+    continue-on-error: true
     needs: [build]
     # if: github.ref_name == github.event.repository.default_branch
     steps:
+
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-dotnet@v4
-
       - name: Package
-        run: dotnet pack -c Release -o ./artifacts
+        run: dotnet pack -c Release -o ./artifacts -p:PackageVersion=${GITHUB_REF/refs\/tags\/v/}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -72,6 +72,7 @@ jobs:
     name: Deploy to Nuget
     runs-on: ubuntu-latest
     needs: [package]
+    if: needs.package.result == 'success'
     steps:
 
       - name: Check for NUGET_TOKEN Secret availability
@@ -99,6 +100,7 @@ jobs:
     name: Deploy to GitHub Packages Registry
     runs-on: ubuntu-latest
     needs: [package]
+    if: needs.package.result == 'success'
     steps:
 
       - name: Download artifacts
