--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -60,7 +60,8 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Package
-        run: dotnet pack -c Release -o ./artifacts -p:PackageVersion=${GITHUB_REF/refs\/tags\/v/}
+        id: package
+        run: dotnet pack -c Release -o ./artifacts -p:PackageVersion=${GITHUB_REF/refs\/tags\/v/}  || echo "Packaging failed"
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
