--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -52,16 +52,14 @@ jobs:
   package:
     name: Package
     runs-on: ubuntu-latest
-    continue-on-error: true
     needs: [build]
-    # if: github.ref_name == github.event.repository.default_branch
+    if: startsWith(github.ref, 'refs/tags/')
     steps:
-
       - uses: actions/checkout@v4
 
       - name: Package
         id: package
-        run: dotnet pack -c Release -o ./artifacts -p:PackageVersion=${GITHUB_REF/refs\/tags\/v/}  || echo "Packaging failed"
+        run: dotnet pack -c Release -o ./artifacts -p:PackageVersion=${GITHUB_REF/refs\/tags\/v/}
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -73,9 +71,7 @@ jobs:
     name: Deploy to Nuget
     runs-on: ubuntu-latest
     needs: [package]
-    if: needs.package.result == 'success'
     steps:
-
       - name: Check for NUGET_TOKEN Secret availability
         id: nuget-token-check
         shell: bash
@@ -101,9 +97,7 @@ jobs:
     name: Deploy to GitHub Packages Registry
     runs-on: ubuntu-latest
     needs: [package]
-    if: needs.package.result == 'success'
     steps:
-
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
